solve overflow created by virtual keyboard at signup page

--- a/client/src/styles/components/_supportee-waiting.scss
+++ b/client/src/styles/components/_supportee-waiting.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   color: #0E1C74;
-  height: 100svh;
+  height: 100vh;
   flex-direction: column;
 
   h3 { 
